[package]
name = "strip-alma-user-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
dotenv = "0.15.0"
json = "0.12.4"
quick-xml = "0.22.0"
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["full"] }

[features]
