[package]
name = "strip-alma-user-stats"
version = "0.1.0"
authors = ["Chrysanthemum Lovelace <chrysanthemum@pitt.edu>"]
edition = "2021"

[lib]
name = "alma"
path = "src/lib.rs"

[[bin]]
name = "strip-alma-user-stats"
path = "src/bin/bin.rs"

[dependencies]
anyhow = "1.0.53"
dotenv = "0.15.0"
env_logger = "0.9.0"
governor = "0.4.2"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.14"
quick-xml = "0.22.0"
regex = "1.5.4"
reqwest = "0.11.9"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }

[dev-dependencies]
maplit = "1.0.2"

[features]
